# scene_graph_editing_tool

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IDEAS.md  README.md  TESTING_CHECKLIST.md  pyproject.toml
config/: agent_config.yaml  agent_prompt.yaml
docs/curriculum/: 01_scene_graphs.ipynb  02_neo4j_backend.ipynb  03_architecture.ipynb  03_sget_architecture.ipynb  04_layout_and_navigation.ipynb  05_gui_and_interaction.ipynb  06_extending_sget.ipynb  PLAN.md
docs/prompt_drafts/: cypher_interface_description.yaml  scene_graph_description.yaml  sget_agent_prompt.yaml
scripts/: launch_with_chat.sh
src/sget/: app.py  main_window.py
src/sget/backend/: neo4j_crud.py  scene_graph_model.py
src/sget/utils/: boundary.py  colors.py  layout.py  mesh_rasterizer.py
src/sget/views/: graph_items.py  graph_view.py  property_panel.py
src/sget/widgets/: add_node_dialog.py  connection_dialog.py  group_dialog.py  layer_panel.py  snapshot_panel.py
tests/: test_neo4j_crud.py  test_placeholder.py  test_scene_graph_model.py
