[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sget"
version = "0.1.0"
description = "Scene Graph Editing Tool — load, view, edit, and save 3D scene graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "networkx",
    "neo4j",
    "numpy",
    "spark-dsg",
    "heracles",
]

[project.scripts]
sget = "sget.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
